Fix horizontal scrolling bug

--- a/cit-261/clock/style.css
+++ b/cit-261/clock/style.css
@@ -1,7 +1,7 @@
 body {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  
+  overflow: hidden;
 }
 .code {
   font-family: courier;
